Changelog
=========

5.4-dev - (unreleased)
----------------------
* Change: Removed collective.sendaspdf dependency
  [voineali refs #20268]

5.3 - (2014-06-06)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.epub
  [voineali refs #19882]
* Change: Moved EPUB related images and actions from eea.soercontent package
  [voineali refs #19882]

5.2 - (2014-01-21)
------------------
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]
* Bug fix: Updated old URLs pointing Trac
  [ghicaale refs #18003]

5.1 - (2013-11-20)
------------------
* Bug fix: links were missing any style
  [simiamih refs #16799]

5.0 - (2013-10-22)
------------------
* Feature: improved epub - daviz reference, toc, styles, cover
  [simiamih refs #16799]

4.9 - (2013-10-07)
------------------
* Feature: major export improvements - image files, cover photo, css
  [simiamih refs #16799]

4.8 - (2013-10-04)
------------------
* Change: updated zope imports with the versions that require minimum Plone 4.1
  for eea.epub
  [ichimdav refs #15651]

4.7 - (2013-06-17)
------------------
* Change: use BeautifulSoup4 instead of deprecated BS 3
  [tiberich #14584]

4.6 - (2013-01-15)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.epub
  [ichimdav #9068]
* Feature: register epubs with application/epub+zip mimetype
  [ichimdav #9068]

4.5 - (2012-11-22)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.epub
  [ichimdav #3621]
* Feature: use filename id when creating plone content, cleaning the filename
  id when it contains illegal characters if boolean property
  clean_epub_filename is enabled at portal_properties/site_properties
  [ichimdav #3621]

4.4 - (2012-06-12)